--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Weathery",
-  "short_name": "WeatherRO",
+  "name": "Weathered",
+  "short_name": "Wthr",
   "icons": [{
     "src": "images/icons/icon-128x128.png",
       "sizes": "128x128",
